--- a/guide/_libs/gnb.html
+++ b/guide/_libs/gnb.html
@@ -28,31 +28,21 @@
 </head>
 
 <body>
-    <div class="wrap plan">
+<div class="wrap libs">
 
-        <script>include.header()</script>
+    <script>include.header()</script>
 
-        <div class="container">
-            <script>include.aside.init()</script>
+    <div class="container">
+        <script>include.aside.init()</script>
 
-            <div class="contents">
-                <h2>Codeset</h2>
-
-                <h3>HTML</h3>
-                <h3>CSS</h3>
-                <h3>SASS</h3>
-                <h3>SCRIPT</h3>
-
-
-
-
-
-            </div>
+        <div class="contents">
+            <h2>GNB</h2>
         </div>
-
-        <script>include.footer()</script>
-
     </div>
+
+    <script>include.footer()</script>
+
+</div>
 
 </body>
 
