--- a/guide/accessibility/wa_intro.html
+++ b/guide/accessibility/wa_intro.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <script src="/assets/js/include.js"></script>
+    <script src="../assets/js/include.js"></script>
     <script>include.meta()</script>
     <script>include.head()</script>
 </head>
@@ -12,7 +12,7 @@
     <div class="wrap wai">
 
         <script>include.header()</script>
-        
+
         <div class="container">
             <script>include.aside.init()</script>
 
