--- a/guide/plan/plan_wai.html
+++ b/guide/plan/plan_wai.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <script src="/assets/js/include.js"></script>
+    <script src="../assets/js/include.js"></script>
     <script>include.meta()</script>
     <script>include.head()</script>
 </head>
