--- a/esg_news.html
+++ b/esg_news.html
@@ -7,14 +7,22 @@
 </head>
 <body>
 <div>GNB영역</div>
+<!--visual 영역-->
+<div class="topArea">
+    <div class="titArea">
+        <strong class="tit"><span class="tk-arboria">ESG</span> 소식</strong>
+        <p class="desc">기업과 사회가 공존하는 ESG 관련 소식을 전달합니다</p>
+    </div>
+    <div class="visual" style="background-image:url(../ak/images/img_esgNews.png)"></div>
+</div>
+<!--//visual 영역-->
+<!--본문영역-->
 <div class="content">
-    <div class="topArea">
-        <div class="titArea">
-            <strong class="tit">ESG 소식</strong>
-            <p class="desc">기업과 사회가 공존하는 ESG 관련 소식을 전달합니다</p>
-        </div>
+    <div>
+
     </div>
 </div>
+<!--//본문영역-->
 
 
 </body>
