--- a/esg_news.html
+++ b/esg_news.html
@@ -18,12 +18,88 @@
 <!--//visual 영역-->
 <!--본문영역-->
 <div class="content">
-    <div>
-
+    <div class="cont">
+        <div class="bbsWrap">
+            <div class="bbs_search">
+                <div class="left">
+                    <select name="" class="select">
+                        <option disabled selected>계열사 전체</option>
+                        <option value="">AK레저</option>
+                        <option value="">AK레저</option>
+                        <option value="">AK레저</option>
+                        <option value="">AK레저</option>
+                    </select>
+                </div>
+            </div>
+            <table class="bbsTbl">
+                <colgroup>
+                    <col width="12%">
+                    <col width="*">
+                    <col width="12%">
+                    <col width="10%">
+                </colgroup>
+                <thead>
+                    <tr>
+                        <th>번호</th>
+                        <th>제목</th>
+                        <th>작성일</th>
+                        <th>조회</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>999</td>
+                        <td><a href="#">[<span class="cate">애경케미칼</span>] 준법의식 함양을 위한 계약관리프로세스 교육 진행</a></td>
+                        <td>2022.04.29</td>
+                        <td>999</td>
+                    </tr>
+                    <tr>
+                        <td>999</td>
+                        <td><a href="#">[<span class="cate">애경케미칼</span>] 준법의식 함양을 위한 계약관리프로세스 교육 진행</a></td>
+                        <td>2022.04.29</td>
+                        <td>999</td>
+                    </tr>
+                    <tr>
+                        <td>999</td>
+                        <td><a href="#">[<span class="cate">애경케미칼</span>] 준법의식 함양을 위한 계약관리프로세스 교육 진행</a></td>
+                        <td>2022.04.29</td>
+                        <td>999</td>
+                    </tr>
+                    <tr>
+                        <td>999</td>
+                        <td><a href="#">[<span class="cate">애경케미칼</span>] 준법의식 함양을 위한 계약관리프로세스 교육 진행</a></td>
+                        <td>2022.04.29</td>
+                        <td>999</td>
+                    </tr>
+                    <tr>
+                        <td>999</td>
+                        <td><a href="#">[<span class="cate">애경케미칼</span>] 준법의식 함양을 위한 계약관리프로세스 교육 진행</a></td>
+                        <td>2022.04.29</td>
+                        <td>999</td>
+                    </tr>
+                    <tr>
+                        <td>999</td>
+                        <td><a href="#">[<span class="cate">애경케미칼</span>] 준법의식 함양을 위한 계약관리프로세스 교육 진행</a></td>
+                        <td>2022.04.29</td>
+                        <td>999</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="paging">
+            <a href="javascript:;" class="first"><span class="blind">처음으로</span></a>
+            <a href="javascript:;" class="prev"><span class="blind">이전으로</span></a>
+            <a href="javascript:;" class="cur">1</a>
+            <a href="javascript:;" class="cur">1</a>
+            <a href="javascript:;" class="next"><span class="blind">다음으로</span></a>
+            <a href="javascript:;" class="last"><span class="blind">마지막으로</span></a>
+        </div>
     </div>
 </div>
 <!--//본문영역-->
-
+<footer class="footer">
+    <div class="inner"></div>
+</footer>
 
 </body>
 </html>
