--- a/esg_news.html
+++ b/esg_news.html
@@ -31,6 +31,8 @@
                     </select>
                 </div>
             </div>
+
+            <!--게시판PC버전-->
             <table class="bbsTbl">
                 <colgroup>
                     <col width="12%">
@@ -85,6 +87,18 @@
                     </tr>
                 </tbody>
             </table>
+            <!--//게시판PC버전-->
+
+            <!--게시파MO버전-->
+            <div class="bbsList">
+                <ul>
+                    <li>
+                        <a href="#">[<span class="cate">애경케미칼</span>] 준법의식 함양을 위한 계약관리프로세스 교육 진행</a>
+                        <span class="date">2022.04.29</span>
+                    </li>
+                </ul>
+            </div>
+            <!--//게시파MO버전-->
         </div>
         <div class="paging">
             <a href="javascript:;" class="first"><span class="blind">처음으로</span></a>
