--- a/esg_news.html
+++ b/esg_news.html
@@ -13,7 +13,7 @@
 <div class="topArea">
     <div class="titArea">
         <h2 class="tit"><span class="tk-arboria">ESG</span> 소식</h2>
-        <p class="desc">기업과 사회가 공존하는<br>ESG 관련 소식을 전달합니다</p>
+        <p class="desc">기업과 사회가 공존하는<br class="mo">ESG 관련 소식을 전달합니다</p>
     </div>
     <div class="visual" style="background-image:url(../ak/images/img_esgNews.png)"></div>
 </div>
@@ -27,7 +27,7 @@
                     <div class="bbs_sort">
                         <button class="bbs_button on" type="button">계열사 전체</button><!-- 활성화되면 on추가 -->
                         <ul class="bbs_sortList">
-                            <li class="selected"><a href="#">계열사 전체</a></li>
+                            <li class="active"><a href="#">계열사 전체</a></li>
                             <li><a href="#">계열사1</a></li>
                             <li><a href="#">계열사2</a></li>
                             <li><a href="#">계열사3</a></li>
