--- a/main.html
+++ b/main.html
@@ -7,26 +7,141 @@
     <link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
 <body>
-    <header>
-        <h1><a href="#"><img src="./images/logo_w.png" alt="AK 홀딩스 로고"></a></h1>
+<header class="expand">
+    <div class="head">
+        <h1><a href="#"><img src="./images/logo_w.png" alt="AK 홀딩스 로고"><img src="./images/logo_b.png" alt="AK 홀딩스 로고"></a></h1>
         <button class="btn-show-menu" id="btnShowMenu" />
-    </header>
-    <main></main>
-    <footer>
-        <div class="info">
-            <h1><a href="#">AK홀딩스(주)</a></h1>
-            <p>04051 서울특별시 마포구 양화로 188, 14층(동교동, 애경타워)</p>
-        </div>
-        <div class="link">
-            <p>
-                <a href="#">오시는 길</a>
-                <em></em>
-                <a href="#">법적고지</a>
-                <em></em>
-                <a href="#">Contact IR</a>
-            </p>
-        </div>
-    </footer>
-
+    </div>
+    <nav>
+        <ul>
+            <li>
+                <h3><a href="#">그룹 소개</a></h3>
+                <ul>
+                    <li>
+                        <ul>
+                            <li><a href="#">그룹 소개</a></li>
+                            <li><a href="#">애경 가치</a></li>
+                            <li><a href="#">창업이념</a></li>
+                            <li><a href="#">인재상</a></li>
+                            <li><a href="#">가치체계도</a></li>
+                            <li><a href="#">인재상</a></li>
+                            <li><a href="#">가치체계도</a></li>
+                            <li><a href="#">미션과 비전</a></li>
+                        </ul>
+                        <ul>
+                            <li><a href="#">Corporate Identity</a></li>
+                            <li><a href="#">의미</a></li>
+                            <li><a href="#">로고 규정</a></li>
+                        </ul>
+                        <ul>
+                            <li><a href="#">회사 소개</a></li>
+                            <li><a href="#">CEO Message</a></li>
+                            <li><a href="#">홀딩스 역할</a></li>
+                            <li><a href="#">거버넌스 구조</a></li>
+                        </ul>
+                        <ul>
+                            <li><a href="#">계열사 소개</a></li>
+                        </ul>
+                        <ul>
+                            <li><a href="#">연혁</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <h3><a href="#">애경 ESG</a></h3>
+                <ul>
+                    <li>
+                        <ul>
+                            <li><a href="#">ESG 경영</a></li>
+                            <li><a href="#">ESG 경영 목표</a></li>
+                            <li><a href="#">ESG 등급</a></li>
+                            <li><a href="#">다양성과 포용성</a></li>
+                            <li><a href="#">ESG 추진체계(조직)</a></li>
+                            <li><a href="#">지속가능경영 보고서</a></li>
+                        </ul>
+                        <ul>
+                            <li><a href="#">ESG 소식</a></li>
+                        </ul>
+                        <ul>
+                            <li><a href="#">윤리경영</a></li>
+                            <li><a href="#">윤리제보관리시스템</a></li>
+                        </ul>
+                        <ul>
+                            <li><a href="#">애경복지재단</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <h3><a href="#">뉴스룸</a></h3>
+                <ul>
+                    <li>
+                        <ul>
+                            <li><a href="#">웹진</a></li>
+                            <li><a href="#">ON AEKYUNG</a></li>
+                        </ul>
+                        <ul>
+                            <li><a href="#">소셜미디어</a></li>
+                            <li><a href="#">Facebook</a></li>
+                            <li><a href="#">Instagram</a></li>
+                            <li><a href="#">Youtube</a></li>
+                            <li><a href="#">Naver</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <h3><a href="#">IR</a></h3>
+                <ul>
+                    <li>
+                        <ul>
+                            <li><a href="#">지배구조</a></li>
+                            <li><a href="#">기업지배구조</a></li>
+                            <li><a href="#">기업지배구조헌장</a></li>
+                        </ul>
+                        <ul>
+                            <li><a href="#">재무정보</a></li>
+                            <li><a href="#">재무상태표</a></li>
+                            <li><a href="#">손익계산서</a></li>
+                            <li><a href="#">현금흐름표</a></li>
+                        </ul>
+                        <ul>
+                            <li><a href="#">공시정보</a></li>
+                            <li><a href="#">공시자료</a></li>
+                            <li><a href="#">공고</a></li>
+                        </ul>
+                        <ul>
+                            <li><a href="#">IR 정보</a></li>
+                            <li><a href="#">Contact IR</a></li>
+                            <li><a href="#">사업보고서</a></li>
+                            <li><a href="#">감사보고서</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </li>
+        </ul>
+    </nav>
+</header>
+<main></main>
+<footer>
+    <div class="info">
+        <h1><a href="#">AK홀딩스(주)</a></h1>
+        <p>04051 서울특별시 마포구 양화로 188, 14층(동교동, 애경타워)</p>
+    </div>
+    <div class="link">
+        <p>
+            <a href="#">오시는 길</a>
+            <em></em>
+            <a href="#">법적고지</a>
+            <em></em>
+            <a href="#">Contact IR</a>
+        </p>
+    </div>
+</footer>
+<script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
+        integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI="
+        crossorigin="anonymous"></script>
+<script src="./js/common.js"></script>
 </body>
 </html>
