--- a/esg_news.html
+++ b/esg_news.html
@@ -128,8 +128,8 @@
         </div>
         <div class="paging">
             <div class="left">
-                <a href="javascript:;" class="first arrow"><span class="blind">처음으로</span></a>
-                <a href="javascript:;" class="prev arrow"><span class="blind">이전으로</span></a>
+                <a href="javascript:;" class="first arrow disabled"><span class="blind">처음으로</span></a>
+                <a href="javascript:;" class="prev arrow disabled"><span class="blind">이전으로</span></a>
             </div>
             <div class="center">
                 <a href="javascript:;" class="cur active">1</a>
