--- a/ak_news_detail.html
+++ b/ak_news_detail.html
@@ -5,15 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="./css/style.css">
-    <title>애경뉴스</title>
+    <title>ESG소식</title>
 </head>
 <body>
 <div>GNB영역</div>
 <!--visual 영역-->
 <div class="topArea">
     <div class="titArea">
-        <h2 class="tit">애경뉴스</h2>
-        <p class="desc">애경의 주요한 소식을 한눈에 확인하세요</p>
+        <h2 class="tit"><span class="tk-arboria">ESG</span> 소식</h2>
+        <p class="desc">기업과 사회가 공존하는<br class="mo">ESG 관련 소식을 전달합니다</p>
     </div>
     <div class="visual" style="background-image:url(../ak/images/img_esgNews.png)"></div>
 </div>
