--- a/main.html
+++ b/main.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, viewport-fit=cover">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
 <body>
-<header class="expand">
+<header class="">
     <div class="head">
         <h1><a href="#"><img src="./images/logo_w.png" alt="AK 홀딩스 로고"><img src="./images/logo_b.png" alt="AK 홀딩스 로고"></a></h1>
         <button class="btn-show-menu" id="btnShowMenu" />
@@ -19,7 +20,8 @@
                 <ul>
                     <li>
                         <ul>
-                            <li><a href="#">애경 가치</a></li>
+                            <!-- 2뎁스 메뉴 활성화시 아래 li에 .active 추가 -->
+                            <li class="active"><a href="#">애경 가치</a></li>
                             <li><a href="#">창업이념</a></li>
                             <li><a href="#">인재상</a></li>
                             <li><a href="#">가치체계도</a></li>
