--- a/esg_news.html
+++ b/esg_news.html
@@ -126,6 +126,8 @@
             </div>
             <!--//게시파MO버전-->
         </div>
+
+        <!-- 페이징 -->
         <div class="paging">
             <div class="left">
                 <a href="javascript:;" class="first arrow disabled"><span class="blind">처음으로</span></a>
@@ -141,6 +143,8 @@
                 <a href="javascript:;" class="last arrow"><span class="blind">마지막으로</span></a>
             </div>
         </div>
+        <!-- //페이징 -->
+
     </div>
 </div>
 <!--//본문영역-->
