--- a/investment_info_list.html
+++ b/investment_info_list.html
@@ -74,6 +74,24 @@
                 </li>
             </ul>
         </div>
+
+        <!-- 페이징 -->
+        <div class="paging">
+            <div class="left">
+                <a href="javascript:;" class="first arrow disabled"><span class="blind">처음으로</span></a>
+                <a href="javascript:;" class="prev arrow disabled"><span class="blind">이전으로</span></a>
+            </div>
+            <div class="center">
+                <a href="javascript:;" class="cur active">1</a>
+                <a href="javascript:;" class="cur">2</a>
+                <a href="javascript:;" class="cur">3</a>
+            </div>
+            <div class="right">
+                <a href="javascript:;" class="next arrow"><span class="blind">다음으로</span></a>
+                <a href="javascript:;" class="last arrow"><span class="blind">마지막으로</span></a>
+            </div>
+        </div>
+        <!-- //페이징 -->
     </div>
 </div>
 <!--//본문영역-->
