--- a/ir_inspect.html
+++ b/ir_inspect.html
@@ -24,74 +24,39 @@
         <div class="download-list">
             <ul>
                 <li>
-                    <div class="inner">
+                    <a href="javascript:;" class="inner">
                         <span class="number">No. 15</span>
-                        <strong class="tit">별도 감사보고서 (2021)</strong>
-                        <a href="#" class="btn-download">다운로드</a>
-                    </div>
+                        <strong class="tit">제52기 대차대조표 공고</strong>
+                        <span class="btn-download">다운로드</span>
+                    </a>
                 </li>
                 <li>
-                    <div class="inner">
+                    <a href="javascript:;" class="inner">
                         <span class="number">No. 15</span>
-                        <strong class="tit">별도 감사보고서 (2021)</strong>
-                        <a href="#" class="btn-download">다운로드</a>
-                    </div>
+                        <strong class="tit">제52기 대차대조표 공고</strong>
+                        <span class="btn-download">다운로드</span>
+                    </a>
                 </li>
                 <li>
-                    <div class="inner">
+                    <a href="javascript:;" class="inner">
                         <span class="number">No. 15</span>
-                        <strong class="tit">별도 감사보고서 (2021)</strong>
-                        <a href="#" class="btn-download">다운로드</a>
-                    </div>
+                        <strong class="tit">제52기 대차대조표 공고</strong>
+                        <span class="btn-download">다운로드</span>
+                    </a>
                 </li>
                 <li>
-                    <div class="inner">
+                    <a href="javascript:;" class="inner">
                         <span class="number">No. 15</span>
-                        <strong class="tit">별도 감사보고서 (2021)</strong>
-                        <a href="#" class="btn-download">다운로드</a>
-                    </div>
+                        <strong class="tit">제52기 대차대조표 공고</strong>
+                        <span class="btn-download">다운로드</span>
+                    </a>
                 </li>
                 <li>
-                    <div class="inner">
+                    <a href="javascript:;" class="inner">
                         <span class="number">No. 15</span>
-                        <strong class="tit">별도 감사보고서 (2021)</strong>
-                        <a href="#" class="btn-download">다운로드</a>
-                    </div>
-                </li>
-                <li>
-                    <div class="inner">
-                        <span class="number">No. 15</span>
-                        <strong class="tit">별도 감사보고서 (2021)</strong>
-                        <a href="#" class="btn-download">다운로드</a>
-                    </div>
-                </li>
-                <li>
-                    <div class="inner">
-                        <span class="number">No. 15</span>
-                        <strong class="tit">별도 감사보고서 (2021)</strong>
-                        <a href="#" class="btn-download">다운로드</a>
-                    </div>
-                </li>
-                <li>
-                    <div class="inner">
-                        <span class="number">No. 15</span>
-                        <strong class="tit">별도 감사보고서 (2021)</strong>
-                        <a href="#" class="btn-download">다운로드</a>
-                    </div>
-                </li>
-                <li>
-                    <div class="inner">
-                        <span class="number">No. 15</span>
-                        <strong class="tit">별도 감사보고서 (2021)</strong>
-                        <a href="#" class="btn-download">다운로드</a>
-                    </div>
-                </li>
-                <li>
-                    <div class="inner">
-                        <span class="number">No. 15</span>
-                        <strong class="tit">별도 감사보고서 (2021)</strong>
-                        <a href="#" class="btn-download">다운로드</a>
-                    </div>
+                        <strong class="tit">제52기 대차대조표 공고</strong>
+                        <span class="btn-download">다운로드</span>
+                    </a>
                 </li>
             </ul>
         </div>
