--- a/ir_business.html
+++ b/ir_business.html
@@ -24,53 +24,60 @@
         <div class="download-list">
             <ul>
                 <li>
-                    <div class="inner">
+                    <a href="javascript:;" class="inner">
                         <span class="number">No. 15</span>
                         <strong class="tit">제52기 대차대조표 공고</strong>
-                        <a href="#" class="btn-download">다운로드</a>
-                    </div>
+                        <span class="btn-download">다운로드</span>
+                    </a>
                 </li>
                 <li>
-                    <div class="inner">
+                    <a href="javascript:;" class="inner">
                         <span class="number">No. 15</span>
                         <strong class="tit">제52기 대차대조표 공고</strong>
-                        <a href="#" class="btn-download">다운로드</a>
-                    </div>
+                        <span class="btn-download">다운로드</span>
+                    </a>
                 </li>
                 <li>
-                    <div class="inner">
+                    <a href="javascript:;" class="inner">
                         <span class="number">No. 15</span>
                         <strong class="tit">제52기 대차대조표 공고</strong>
-                        <a href="#" class="btn-download">다운로드</a>
-                    </div>
+                        <span class="btn-download">다운로드</span>
+                    </a>
                 </li>
                 <li>
-                    <div class="inner">
+                    <a href="javascript:;" class="inner">
                         <span class="number">No. 15</span>
                         <strong class="tit">제52기 대차대조표 공고</strong>
-                        <a href="#" class="btn-download">다운로드</a>
-                    </div>
+                        <span class="btn-download">다운로드</span>
+                    </a>
                 </li>
                 <li>
-                    <div class="inner">
+                    <a href="javascript:;" class="inner">
                         <span class="number">No. 15</span>
                         <strong class="tit">제52기 대차대조표 공고</strong>
-                        <a href="#" class="btn-download">다운로드</a>
-                    </div>
+                        <span class="btn-download">다운로드</span>
+                    </a>
                 </li>
                 <li>
-                    <div class="inner">
+                    <a href="javascript:;" class="inner">
                         <span class="number">No. 15</span>
                         <strong class="tit">제52기 대차대조표 공고</strong>
-                        <a href="#" class="btn-download">다운로드</a>
-                    </div>
+                        <span class="btn-download">다운로드</span>
+                    </a>
                 </li>
                 <li>
-                    <div class="inner">
+                    <a href="javascript:;" class="inner">
                         <span class="number">No. 15</span>
                         <strong class="tit">제52기 대차대조표 공고</strong>
-                        <a href="#" class="btn-download">다운로드</a>
-                    </div>
+                        <span class="btn-download">다운로드</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="javascript:;" class="inner">
+                        <span class="number">No. 15</span>
+                        <strong class="tit">제52기 대차대조표 공고</strong>
+                        <span class="btn-download">다운로드</span>
+                    </a>
                 </li>
             </ul>
         </div>
