--- a/value_founded.html
+++ b/value_founded.html
@@ -21,7 +21,9 @@
 <!--본문영역-->
 <div class="content">
     <div class="cont">
-
+        <div class="founded-story">
+            <em class="caption">애경 그룹의 창업이념인<br class="mo"> “애경(愛敬)”은 우리 민족의<br class="mo"> 애인경천(愛人敬天) 사상에 기초하여</em>
+        </div>
     </div>
 </div>
 <!--//본문영역-->
