--- a/ak_news.html
+++ b/ak_news.html
@@ -13,7 +13,7 @@
 <div class="topArea">
     <div class="titArea">
         <h2 class="tit">애경뉴스</h2>
-        <p class="desc">애경의 주요한 소식을 한눈에 확인하세요</p>
+        <p class="desc">애경그룹의 최신 소식을 전해드립니다</p>
     </div>
     <div class="visual" style="background-image:url(../ak/images/img_esgNews.png)"></div>
 </div>
