--- a/value_founded.html
+++ b/value_founded.html
@@ -22,7 +22,14 @@
 <div class="content">
     <div class="cont">
         <div class="founded-story">
-            <em class="caption">애경 그룹의 창업이념인<br class="mo"> “애경(愛敬)”은 우리 민족의<br class="mo"> 애인경천(愛人敬天) 사상에 기초하여</em>
+            <div class="desc">
+                <em class="caption">애경 그룹의 창업이념인<br class="mo"> “애경(愛敬)”은 우리 민족의<br class="mo"> 애인경천(愛人敬天) 사상에 기초하여</em>
+                <p class="desc">사람을 하늘과 같이 사랑하고 존경하는 마음을<br class="mo"> 가지고 좋은 제품을 만들어 국가의 발전에<br class="mo"> 기여한다는 창업주의 뜻을 담고 있습니다.</p>
+                <p class="desc">애경 그룹은 사랑과 존경의 가치를 기반으로<br class="mo"> 늘 고객 곁에서 함께 하며 풍요롭고 살기 좋은<br class="mo"> 세상을 만들어 나가기 위해 노력하고 있습니다.</p>
+            </div>
+            <div class="ak-cally">
+                <img src="../ak/images/img_cally_ak.png" alt="愛敬(애경)">
+            </div>
         </div>
     </div>
 </div>
