--- a/ak_news_detail.html
+++ b/ak_news_detail.html
@@ -12,8 +12,8 @@
 <!--visual 영역-->
 <div class="topArea">
     <div class="titArea">
-        <h2 class="tit"><span class="tk-arboria">ESG</span> 소식</h2>
-        <p class="desc">기업과 사회가 공존하는<br class="mo">ESG 관련 소식을 전달합니다</p>
+        <h2 class="tit">애경뉴스</h2>
+        <p class="desc">애경그룹의 최신 소식을 전해드립니다</p>
     </div>
     <div class="visual" style="background-image:url(../ak/images/img_esgNews.png)"></div>
 </div>
