--- a/value_founded.html
+++ b/value_founded.html
@@ -23,14 +23,37 @@
     <div class="cont">
         <div class="founded-story">
             <div class="desc">
-                <em class="caption">애경 그룹의 창업이념인<br class="mo"> “애경(愛敬)”은 우리 민족의<br class="mo"> 애인경천(愛人敬天) 사상에 기초하여</em>
-                <p class="desc">사람을 하늘과 같이 사랑하고 존경하는 마음을<br class="mo"> 가지고 좋은 제품을 만들어 국가의 발전에<br class="mo"> 기여한다는 창업주의 뜻을 담고 있습니다.</p>
-                <p class="desc">애경 그룹은 사랑과 존경의 가치를 기반으로<br class="mo"> 늘 고객 곁에서 함께 하며 풍요롭고 살기 좋은<br class="mo"> 세상을 만들어 나가기 위해 노력하고 있습니다.</p>
+                <em class="caption">애경 그룹의 창업이념인<br class="mo"> “애경(愛敬)”은<br class="pc"> 우리 민족의<br class="mo"> 애인경천(愛人敬天) 사상에 기초하여</em>
+                <p>사람을 하늘과 같이 사랑하고 존경하는 마음을<br class="mo"> 가지고<br class="pc"> 좋은 제품을 만들어 국가의 발전에<br class="mo"> 기여한다는 창업주의 뜻을 담고 있습니다.</p>
+                <p>애경 그룹은 사랑과 존경의 가치를 기반으로<br class="mo"> 늘 고객 곁에서 함께 하며<br class="pc"> 풍요롭고 살기 좋은<br class="mo"> 세상을 만들어 나가기 위해 노력하고 있습니다.</p>
             </div>
             <div class="ak-cally">
                 <img src="../ak/images/img_cally_ak.png" alt="愛敬(애경)">
             </div>
         </div>
+    </div>
+    <div class="core-value">
+        <div class="visual" style="background-image:url(../ak/images/img_core_value.png)">
+            <strong class="tit">핵심가치</strong>
+        </div>
+        <ul class="core-value-list">
+            <li class="clean">
+                <em class="tit">깨끗함</em>
+                <p class="desc">애경 그룹은 정직하고 투명한<br> 경영 활동을 통해 고객의 생활을<br> 더욱 깨끗하고 아름답게<br>만들기 위해 노력합니다.</p>
+            </li>
+            <li class="trust">
+                <em class="tit">신뢰</em>
+                <p class="desc">애경 그룹은 구성원 및 파트너들과<br> 끊임 없는 소통으로 신뢰를 형성하여<br> 누구나 믿을 수 있는<br> 제품과 서비스를 제공 합니다.</p>
+            </li>
+            <li class="innovation">
+                <em class="tit">혁신</em>
+                <p class="desc">애경 그룹은 고객이 원하는 가치가<br> 무엇인지 고민하며 고객의 삶에<br> 더 가까이 가기 위한 길을 찾기 위해<br> 항상 혁신하고 있습니다.</p>
+            </li>
+            <li class="challenge">
+                <em class="tit">도전</em>
+                <p class="desc">애경 그룹은 창의적인 생각과<br> 실패를 두려워하지 않는<br> 용기를 바탕으로 끊임없이 고객에게<br> 다가가기 위해 도전합니다.</p>
+            </li>
+        </ul>
     </div>
 </div>
 <!--//본문영역-->
