--- a/financial_cash2018.html
+++ b/financial_cash2018.html
@@ -24,14 +24,14 @@
         <strong class="cont_tit">AK홀딩스㈜</strong>
         <div class="tab-wrap">
             <ul class="tab">
-                <li><a href="javascript:;" class="active">2021년</a></li>
+                <li><a href="javascript:;">2021년</a></li>
                 <li><a href="javascript:;">2020년</a></li>
                 <li><a href="javascript:;">2019년</a></li>
-                <li><a href="javascript:;">2018년</a></li>
+                <li><a href="javascript:;" class="active">2018년</a></li>
                 <li><a href="javascript:;">2017년</a></li>
             </ul>
             <div class="tab-cont-wrap">
-                <!--2021년-->
+                <!--2018년-->
                 <div class="tab-cont">
                     <div class="tbl-title-area">
                         <em class="tit">연결</em>
@@ -46,21 +46,21 @@
                             <tbody>
                                 <tr>
                                     <th>영업활동으로 인한 현금흐름</th>
-                                    <td>(9,766)</td>
+                                    <td>317,258</td>
                                 </tr>
                                 <tr>
                                     <th>투자활동으로 인한 현금흐름</th>
-                                    <td>(38,244)</td>
+                                    <td>(224,602)</td>
                                 </tr>
                                 <tr>
                                     <th>재무활동으로 인한 현금흐름</th>
-                                    <td>155,531</td>
+                                    <td>89,961</td>
                                 </tr>
                             </tbody>
                             <tfoot>
                                 <tr>
                                     <th>현금 및 현금성 자산의 증감</th>
-                                    <td>107,521</td>
+                                    <td>182,617</td>
                                 </tr>
                             </tfoot>
                         </table>
@@ -72,17 +72,21 @@
                             <tbody>
                             <tr>
                                 <th>기초의 현금 및 현금성자산</th>
-                                <td>405,266</td>
+                                <td>330,384</td>
                             </tr>
                             <tr>
                                 <th>현금 및 현금성 자산의 환율변동으로 인한 효과</th>
-                                <td>1,352,749</td>
+                                <td>(669)</td>
+                            </tr>
+                            <tr>
+                                <th>연결대상범위의 변동으로인한 현금의 증감</th>
+                                <td>(919)</td>
                             </tr>
                             </tbody>
                             <tfoot>
                             <tr>
                                 <th>기말의 현금 및 현금성 자산</th>
-                                <td>515,234</td>
+                                <td>511,413</td>
                             </tr>
                             </tfoot>
                         </table>
@@ -101,36 +105,35 @@
                             <tbody>
                             <tr>
                                 <th>영업활동으로 인한 현금흐름</th>
-                                <td>35,910</td>
+                                <td>15,763</td>
                             </tr>
                             <tr>
                                 <th>투자활동으로 인한 현금흐름</th>
-                                <td>(108,600)</td>
+                                <td>(3,772)</td>
                             </tr>
                             <tr>
-                            <tr>
                                 <th>재무활동으로 인한 현금흐름</th>
-                                <td>66,092</td>
+                                <td>(11,678)</td>
                             </tr>
                             <tr>
                                 <th>현금 및 현금성 자산의 증감</th>
-                                <td>(6,598)</td>
+                                <td>313</td>
                             </tr>
                             <tr>
                                 <th>기초의 현금 및 현금성자산</th>
-                                <td>6,598</td>
+                                <td>2,338</td>
                             </tr>
                             </tbody>
                             <tfoot>
                             <tr>
                                 <th>기말의 현금 및 현금성 자산</th>
-                                <td>0</td>
+                                <td>2,651</td>
                             </tr>
                             </tfoot>
                         </table>
                     </div>
                 </div>
-                <!--//2020년-->
+                <!--//2019년-->
             </div>
         </div>
     </div>
