--- a/financial_cash2020.html
+++ b/financial_cash2020.html
@@ -24,14 +24,14 @@
         <strong class="cont_tit">AK홀딩스㈜</strong>
         <div class="tab-wrap">
             <ul class="tab">
-                <li><a href="javascript:;" class="active">2021년</a></li>
-                <li><a href="javascript:;">2020년</a></li>
+                <li><a href="javascript:;">2021년</a></li>
+                <li><a href="javascript:;" class="active">2020년</a></li>
                 <li><a href="javascript:;">2019년</a></li>
                 <li><a href="javascript:;">2018년</a></li>
                 <li><a href="javascript:;">2017년</a></li>
             </ul>
             <div class="tab-cont-wrap">
-                <!--2021년-->
+                <!--2020년-->
                 <div class="tab-cont">
                     <div class="tbl-title-area">
                         <em class="tit">연결</em>
@@ -46,21 +46,21 @@
                             <tbody>
                                 <tr>
                                     <th>영업활동으로 인한 현금흐름</th>
-                                    <td>(9,766)</td>
+                                    <td>(191,716)</td>
                                 </tr>
                                 <tr>
                                     <th>투자활동으로 인한 현금흐름</th>
-                                    <td>(38,244)</td>
+                                    <td>(18,567)</td>
                                 </tr>
                                 <tr>
                                     <th>재무활동으로 인한 현금흐름</th>
-                                    <td>155,531</td>
+                                    <td>333,786</td>
                                 </tr>
                             </tbody>
                             <tfoot>
                                 <tr>
                                     <th>현금 및 현금성 자산의 증감</th>
-                                    <td>107,521</td>
+                                    <td>123,503</td>
                                 </tr>
                             </tfoot>
                         </table>
@@ -72,17 +72,21 @@
                             <tbody>
                             <tr>
                                 <th>기초의 현금 및 현금성자산</th>
-                                <td>405,266</td>
+                                <td>284,885</td>
                             </tr>
                             <tr>
                                 <th>현금 및 현금성 자산의 환율변동으로 인한 효과</th>
-                                <td>1,352,749</td>
+                                <td>(2,954)</td>
+                            </tr>
+                            <tr>
+                                <th>연결대상범위의 변동으로인한 현금의 증감</th>
+                                <td>(168)</td>
                             </tr>
                             </tbody>
                             <tfoot>
                             <tr>
                                 <th>기말의 현금 및 현금성 자산</th>
-                                <td>515,234</td>
+                                <td>405,266</td>
                             </tr>
                             </tfoot>
                         </table>
@@ -101,30 +105,29 @@
                             <tbody>
                             <tr>
                                 <th>영업활동으로 인한 현금흐름</th>
-                                <td>35,910</td>
+                                <td>28,552</td>
                             </tr>
                             <tr>
                                 <th>투자활동으로 인한 현금흐름</th>
-                                <td>(108,600)</td>
+                                <td>(76,665)</td>
                             </tr>
                             <tr>
-                            <tr>
                                 <th>재무활동으로 인한 현금흐름</th>
-                                <td>66,092</td>
+                                <td>52,289</td>
                             </tr>
                             <tr>
                                 <th>현금 및 현금성 자산의 증감</th>
-                                <td>(6,598)</td>
+                                <td>(4,176)</td>
                             </tr>
                             <tr>
                                 <th>기초의 현금 및 현금성자산</th>
-                                <td>6,598</td>
+                                <td>2,422</td>
                             </tr>
                             </tbody>
                             <tfoot>
                             <tr>
                                 <th>기말의 현금 및 현금성 자산</th>
-                                <td>0</td>
+                                <td>6,598</td>
                             </tr>
                             </tfoot>
                         </table>
