--- a/financial_income2018.html
+++ b/financial_income2018.html
@@ -12,7 +12,7 @@
 <!--visual 영역-->
 <div class="topArea">
     <div class="titArea">
-        <h2 class="tit">재무정보</h2>
+        <h2 class="tit">재무상태표</h2>
         <p class="desc">사업 실적을 포함한<br class="mo">각종 투자 관련 정보를 제공합니다</p>
     </div>
     <div class="visual" style="background-image:url(../ak/images/img_financial.png)"></div>
